force-app/main/default/objects/ErrorLogAPI__c/ErrorLogAPI__c.object-meta.xml
<CustomObject>
    <label>Error Log API</label>
    <nameField>
        <label>ErrorLogAPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Log APIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>