force-app/main/default/objects/ErrorLogAPI__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <label>ObjectType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>