force-app/main/default/objects/ErrorLogAPI__c/fields/ErrorStatus__c.field-meta.xml
<CustomField>
    <fullName>ErrorStatus__c</fullName>
    <label>ErrorStatus</label>
    <length>5</length>
    <type>Text</type>
</CustomField>